update readme & deploy script

--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "reset": "hardhat run scripts/reset.ts",
     "test": "hardhat test",
     "coverage": "hardhat coverage --network hardhat",
-    "compile": "prettier --write 'contracts/**/*.sol' && hardhat compile",
+    "compile": "prettier --write 'contracts/**/*.sol' && hardhat clean && hardhat compile",
+    "deploy:local": "hardhat clean && hardhat run scripts/deploy.ts --network hardhat",
     "deploy:ropsten": "hardhat clean && hardhat run scripts/deploy.ts --network ropsten",
+    "deploy:mainnet": "hardhat clean && hardhat run scripts/deploy.ts --network mainnet",
     "accounts": "hardhat accounts",
     "balance": "hardhat balance",
     "generate": "hardhat generate",
